# python-compute-graph

./: .gitignore  README.md  pyproject.toml
computegraph/: __init__.py  __main__.py  utils.py
computegraph/framework/: abstract.py  base.py  data.py  network.py  node.py  operation.py  socket.py
computegraph/package/: data_items.py  string_concat.py
test/: test_framework.py  test_network.py
