[project]
name = "computegraph"
requires-python = ">=3.10"
version = "0.1.0"

[tool.black]
line-length = 110
extend-exclude = '''
/(
    | .github\/
    | .ipynb_checkpoints\/
    | .mypy_cache\/
    | .pytest_cache\/
    | .tox\/
    | .venv\/
    | .vscode\/
    | build\/
    | dist\/
    | docs\/
    | examples\/
    | log\/
    | QMBT.egg-info\/
    | resources\/
    | scripts\/
/)
'''